remove intel-device-plugins-operator chart

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:PxK78R+8KUievTpvUec2Xc0wO5dQdOnfwEByTVqJBKwlfzhpAH0ExHzJeVGAu9oqjOf3OtC1KDf1MCj7WJhAGso=,iv:grsztnDF+vktla68nIalTRHH7BHzVWV3+LVOOya5tyI=,tag:6YwsQOq72nrYNb/dVPPBzw==,type:comment]
-#ENC[AES256_GCM,data:XGuTNS9uMHtvfWInHtyf3+kaPs7b0u7EqNrvv8q92hgEadtidXzQmoLAD7E=,iv:C81yZsGP4IFghXW4F834B9F1bRHZ31sZYKy7o8+UFaI=,tag:pPL0V+5PQVtCcGzxHkZjUw==,type:comment]
-VIP: ENC[AES256_GCM,data:KBBWPppRTjAs9Er8SA==,iv:Yq2j7jUkcK/yMXUskjupepu+WRO1zcIgcDCHTabyrec=,tag:DnfPAiJx+Drw1njkWD2kfA==,type:str]
-#ENC[AES256_GCM,data:Xqs3FV9a/oqXIJDR0tsFPw+90qxaOXMpc54D,iv:dmiragQaORBv5MZnVJ6IDT9zzkJFrnbu4Noqzg9fVOs=,tag:fY+m9dwtvVTkunWIA9CaWw==,type:comment]
-#ENC[AES256_GCM,data:KRS8Y2My/hCbPbs1/ESi8kcnty4LTiodyc5NeBgMQdXbwQ4YCQwop+E/iIoCsjAVaizOneHo2mwzAofwVAKN25ISKD/BfwFXeIiMpEd4jXkF1FoIo6CtLss=,iv:IzK6Ef9ayKhsKgLBL50sKyLvdR9QTLl5AMqsru5AVBU=,tag:uXUsBLQ9cPhKVJlUB6gZWQ==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:mP/+ZA2T8jbi5yYP3oA=,iv:F85zpkQ3eTGubrSUbGzPxgSf0Jbi+OgP66farkH2Xic=,tag:jhx7W09JS/S85n2/nErpug==,type:str]
-#ENC[AES256_GCM,data:fwIHaHtqmZqbRETejyBwdvYaUzzLiCaCO6EnQJ+ehyV92Q==,iv:OFBlYEMA4OedwTTta79x/etGWsje2VZSKtBZFVWktLU=,tag:KVoHRm7zta7tUbMQn5i6aA==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:gjLlqw4JiaBjDQ8V8A==,iv:0Rf5nY6i/Z6QhdN9c8XwFTdZP+4hdhDholFxZpZ703A=,tag:aIMzwT6URCtQh43Q/LYyKw==,type:str]
-#ENC[AES256_GCM,data:1Fh348VSvx7P6ocgUPXHZifQHqQe9TAm/72nBFY06uDVFOCBKky3oQA7paIcL30=,iv:8nBTis7069f3Sw+SOvj2fgtNTklFK8zaVTzWxSJbiaI=,tag:W83+VVgA0U8MD19U9NjzQQ==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:7Yki7/jVk3n0hSwdWufNSkLkKs/oJ4gIXSDvnQQR2Q==,iv:SNKyTzrOFHPuJe95oW35lnNDTR/66Oyk+mxDNWDY+qw=,tag:nIMMl3zWAi5v5eYMKUUs/A==,type:str]
-#ENC[AES256_GCM,data:jfkgNRDicwYCbyLpq7mTM4jIgUAUkttBVCPy/FLu7+SMd1DRP5Xs9Z4KdGXuFsjONvXKC5wjuVIfkaVXN5ZP4kX03lr3W2AWFGKkQHH96lq7bg==,iv:/wjVIZqi6jYL7S7KPrHJ7ne1FercXYP6mN0rhpyQAoU=,tag:LTx6hKl8Kf+ECLqV/izyOA==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:QV0rVrSn6lPATl99BLnp,iv:30Trj3QKasiznCMaHW9+GJY292RtfS26EqLEDfHx3NA=,tag:XzuH+uHTiWQnPibefQRgwg==,type:str]
-#ENC[AES256_GCM,data:tOH058opRHaOIJJrjGcJNZxn//MHZx9a121ILEEimwWs,iv:5qwCMcWCSJvuRIQoz1Hu1aigmZ2zKWWHLdIFJ0F5xrk=,tag:VPjGvO8yUakeTGrjy/iOMQ==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:ldOvFJ3HXrmwkt8Sy1Zk,iv:/ZkyBypJcaB8PGFYIQ8M9BNXMmt1hHrNxfnywZ6v9A0=,tag:oUQUl7hamofEMw+Sw0TKBw==,type:str]
-#ENC[AES256_GCM,data:9RkKrrZtirfnhi/fBtN6U2EWgrNrL7UUodgWV8/h/9zUzCwmEX41nJrCUPVkDFQZEXJ5sODT5UG6dq9vibanHXnS3gCaRcZ5iufuwWLiWRw=,iv:GEpl9xGGKrCXgDa0buE2AuPxQKd/uWZCZhxEr8uKsJM=,tag:fp0vmolcOcgY3w7wBZPKLw==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:TrizeDRFmLHyPMfo6L+E,iv:/wbDPe+1FjuamZTuBdtjfBOYK4Kjr8cY9JmvXAdplhI=,tag:xrHardiJ12e8rvPeSvPyOQ==,type:str]
-#ENC[AES256_GCM,data:RySIsxs1fqByLss8p5ImkwI4Y/lO8K0R4tY2EwTzlXib7paUnu0cEomeDUUX71EiiyvuV61bWG3w+qhQa/IaHizAMXTfumjznyFg3gs572ZR9ReaQZ/I,iv:8L/l2czZTq+HP1+1w6Dzh7zpWv9hxVKpNJTGDH8YYow=,tag:NeoEU9SxoUmhAibf425zHw==,type:comment]
-#ENC[AES256_GCM,data:pbQKew0N68DAZQXBojDcLgyYopF7v5ZKmwSERxabkYZeQlF6jNPYH74Nk5qdDM50xs+NdfYiDDGDvQURiVXnm6p+SeGWC8zB+lT/VUdj18nMMKBR4Sy8Kk6B3mLM3XV287OgEvh42y+VZusypAT+2pGz6gMzc3m+MTXnTA==,iv:PR9MGcb9fWb9ordhu5US5gPAOgd1bM9CXB8JU7I9mTQ=,tag:Foe8tGDjzbBxoKmwajGDig==,type:comment]
-#ENC[AES256_GCM,data:fA4WI73JEdAZDhZXPH/7UzV9fct/j0kqYDZxAF4ZtLxsIaKvbxWed72t9XlW00Kstl2nnLoO7PqTn3pQYfBZyCqEVjjp8tFSzPhg8XGzK1U=,iv:9WZYX4QaZHa9b0v0RfNbTdV56z/DQsDmwfT8Wh26vZU=,tag:ojyNJgHRIi38r/XKS30dDg==,type:comment]
-#ENC[AES256_GCM,data:pYT5HCGUSjYAWVPgKQYsaHonEkY7CPVViyOI7u61fX33lM9+sqwRFLcncNS4T3VzJZLE6Zql,iv:0MPpt2jbHTd1blQHp9OpEmOgA/7Cus/+rhOOPgGRLkQ=,tag:xBo691leILM1QmgKluRoYw==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:1uT4hsjKxUPBd6Ql,iv:5KIlm1Tc7bWnPHd4kP9ssRL6WwkGArBhCj7puFZf1Jk=,tag:eAwcp2RoZ5SXlyPpmJmqYg==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:9LrfybogKb4xRk8kEHpeVQI=,iv:VW2z9fbDS2x0PAYFQWUL4YlsJR/SIradL7Ym3p9u7ps=,tag:HTGQ71e/xiThYK+ON5jSGw==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:7vZL1C8h96CNgX1hrWfpLbf1w7QF3PKk5L2pZG8wrpw=,iv:fFY3kA28WDlcCsbcYawilyIlt+bDs+zdsXfMptUQwaE=,tag:Ui1U79+OE6MpX+wzyh8m5w==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:QfIW2bmHHp+1K1Mq3h1e5SfaAtAyI6NlnpK2lsz49MdoGCKtOcXuiA==,iv:JTYY1pmXLACkOPWIJ7kRbGRErxG8WjJamZw+dRIOfJo=,tag:mrKkRtxQ6T7tcU0dwutYTQ==,type:str]
-#ENC[AES256_GCM,data:/JFFdAcXJoXdaw9l1FN8ls6aavJ4kSiAJmnetFjJuAOS3a3wrk5eQHea08qjSaYlmjPXwkDRQ+JLqSFjIwmQBQ==,iv:zwrmIO1Qo5AKbv6QJvV6NSsg/ytNIgZRA8ryq5KWzkw=,tag:OUgEBK0LR7OZ9yuOzjIXyg==,type:comment]
-#ENC[AES256_GCM,data:fUhcQ2B480nMa9OOVWSTYV0CMBp/2LT3Gbz6psZdRoE3F2KM5rokJaP6eEk1k+AdBYbtmV0AZH8=,iv:+mvbTI/8HUNXhv2r390/Bw2AT0cYJH5gXeBCLl6eLDY=,tag:SgAVTNlshcpgMbxNPvt1DQ==,type:comment]
-#ENC[AES256_GCM,data:8iZ3cyc211ykbYT0nAZHlvw3m8Z87kQgOw==,iv:5yDlmIf8wFYN8WgG/AV7iMGxmkojnrLSBfsoFn9Ko7A=,tag:JW1g0WNFl6Vl76zIYj4DPg==,type:comment]
-#ENC[AES256_GCM,data:1k1xC10WnW2+pQCpKOotz3itM6N+zVvy2JqtcelpD+cN/asOF599GFI/H/leTeaYiMH6tGdGM4tQeW7bym8+m2W8U0CZ8MxDUXTUw6I=,iv:p5Yp8qtyFtMQeIDz0aYhsHiKU2d4QSXlqXxly9ixIto=,tag:k/kwWiCmqe8yHPMWP9/QSA==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:mD5YaNDbMjw3F4LzJ/N4Gx/V2KbM5Hyp1cddG8v0Ixu5DOzAXma4RLBxwOnM/MU2,iv:5OOKGh7tR1Xo2JG37xcApCeZ3x/etX6U7/2uAOoWFVk=,tag:3tjMCbXF5k7pCUuNplhEvg==,type:str]
-#ENC[AES256_GCM,data:k279Hqzd15fcQ9pkFBgWQzLSQ6y8jkWf80XQJdn3J4EZo7Js1TvR30ONKc1r8KsIuyhyKosYsQ2IgKY+e9XumYK7P7gnLGo=,iv:DX2XMmpvMeAOZxJelDzNw/7XmL8SFLmrEwgWCnw2Qe4=,tag:0Mu6QUK7wKHoir2PFrihGA==,type:comment]
-#ENC[AES256_GCM,data:S0nkEpc09MvodVvjGGw6qLoKM3yBprfS1AGDjphKYCtxjlFOPi9oBsijEWrioljbNqa+/o7U,iv:jbb6YHijzbwWS73o+c1vWNwHPOKU8dDhtD2fOCFL4UM=,tag:8QMi52hBFv2sqfPHmzF50g==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:qHfp8DtfdA==,iv:wdncysiAEinbzDcRiMawGQ/EoySOJevh67V1hc9dM0Q=,tag:SnecEfS9jX2Hw+FLu0P55Q==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:fY4ojStURgrd8xzAsyMXVV1z6+U=,iv:Cg9AKjZnCI1VqWgOxwrD15Glsa47c+4JoDhZFgiuAPE=,tag:y+njJRewtVMHDaJ0IgjDHg==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:XruGOlYTLd/j3LA=,iv:5UnO63D0Sor2XkgN/pJlcuj67G6WFL7+kUlqsYKp44I=,tag:QTRaD5sPrx2cUEUeENrQqw==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:g1cj5CuMgdtCjkI3NosK,iv:uV9iWaUWQq4HQpi0Jy4u06jPIgXgJkq+KcNJ/m/BYVU=,tag:VdzLVSjcKDyvEKE9568QTg==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:vEC8sKPkrGhHFA2bT/2x+yjYPVag09w0Rg==,iv:U6C/GgSmGPoUzc6MQqNYTcFTe4WKbJ/iTeU55AIu0/c=,tag:Ashsfi5ETzeh0rMrsszUvg==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:/6VbsHrdsi5BqlxFm2zxfVtbBgOlrhc7/WiZmDp/TA==,iv:KDafu0gVvWgw8vFiLHDmPKJrtNfX5LCdhYhot+U9yKQ=,tag:zHSDpbuuqAYtGxRTXulwUg==,type:str]
-#ENC[AES256_GCM,data:QTPz3Vbnba7GECqD62l+Y/BHgNGkJsAwpgMDyALPdKSbkxmhpfk=,iv:ozlKwBtGOu/F13nOyFG1i2mZT6mFvm7rbkECh7KTu3A=,tag:dfS3L/SN4oNTrgNGih8s7g==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:St0fiF19dx0gqnGvs7itzct930U=,iv:mjtptoAqgugHLYr5jEOkbRzAIzQXPp+O4yvexa+lZ7A=,tag:At2Rod+HMRCeqdQ44jBpjA==,type:str]
-#ENC[AES256_GCM,data:QgjB152y11uy4qdJMag=,iv:4DkyH/zfcTu5Xu+zr15s7oxt70eViB3U87KcX2ZYp2M=,tag:i0xeGyGFZ3fiV/BTJL2ZOg==,type:comment]
-PODNET: ENC[AES256_GCM,data:PTA4V4jINopWYJ0cyA==,iv:6Sa8Poz5XR+nHvzw2OB3JTmvZkGKGQbTsEJV1gNMnrs=,tag:b10q9lFuntAeeLCqvAkcEA==,type:str]
-SVCNET: ENC[AES256_GCM,data:u0TFU7bwiMZ80t6wSg==,iv:EK+JJ+GtX+BilLX9DF/ZARXVsdwcFScW+xTU8pSagBY=,tag:2L97cPrimVb4e5VqucqrOQ==,type:str]
+#ENC[AES256_GCM,data:VyeCRDzgy23FNtMkxrGZiNRr/ZtRFKD8fjqVvL3On/N/EZfzxYBN9uIkmAqHu/1dGtscWpNevSilCEeEAT2Uo84=,iv:oS5JjyPbOt2NJgzYpKhzIm3VNjesYS+uljzFMEZDKAI=,tag:pUHIUYfMcQl6oVi7v1A+wg==,type:comment]
+#ENC[AES256_GCM,data:BgCBjNRF0Nkrd2p3RHvPb2cFPSzYO0ul9LI6NoHI262mZiD3sYebSKfTTtk=,iv:LYt8gZH8CHO4/8rCv3UYx2hICp28MvGWED8UH7SF4RY=,tag:WakCcfMeYNFD9pSKa16Zug==,type:comment]
+VIP: ENC[AES256_GCM,data:NmsOx5Weeimpko+uWw==,iv:aaGdfBv0Kt8hycxkm1IHWwxj/6FE4PNaHky+Xa4TQDE=,tag:LhyfPEr7m9tAxX0WUYkYXg==,type:str]
+#ENC[AES256_GCM,data:h18RHyViPJoVquxxJkEKDm4I3SDndz8oIQdB,iv:Qmc32QEYtJYO/GQys0VJnEZCIc7Dfj1BVLdDgqz+deg=,tag:E1m8ug9Jw3cidw2NAwI7ow==,type:comment]
+#ENC[AES256_GCM,data:3nr6/y7XqOMOGmjYgUr8jzg1tu7Y9GFDvlKWAoQ6qVaNSJfKG/pThvd/plT0ho9btDrCBBHTIhowUVPAfblQ3wGgi6JYAjwffE/xC5oAivZNjlGmrLIQiHM=,iv:TroDgQAQuQnEvNJ0clqQhx49JqUejf/culg6v8dQNPM=,tag:v/MvI/jWbyw57+aMMnfJyg==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:4aO5pV0iQI+++LiLAEU=,iv:oc8afj4rvJJlXmnKI89PR7lK9XSk1+zSSutkA/9tbl0=,tag:TxsS3Xp1zGc0zENdPFpmFw==,type:str]
+#ENC[AES256_GCM,data:tnGhYUxJLwIheYShbKlI+c7P6kmSyvtWvoops881/JBpZw==,iv:uz94px24hIPEPvsNjic8YXlr9E1NaAQDPFAp7DIE/tU=,tag:kynk+oEWK6pAm9wYUUQvmA==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:MpJgvehetJdukF79Dg==,iv:QfsP7ELwKQcdR7FbJKZAYdaxx2Tz3HCkj1EhNDqGLfU=,tag:p7h5Cp4Z1KYDt7p1mVhYjA==,type:str]
+#ENC[AES256_GCM,data:Na5AjghqN8QFCr8mjTRR5WjWyVNAmF1Xvgq4PTXXM8BGAauQv6g3X+uNlrFCqlc=,iv:n5DcgCRkSBgpHHzmnuKFtRSDA/9euTd9XURUYg+NJNc=,tag:dBr7Vqyli9jT6uDVgWLLhg==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:TQKG01/1FGOrOSOqLFafChlvzWGdifmBUqCroKiaIA==,iv:OPaF9US3wDCvNiFNpcCvkIKlqF/AeFhGVnVeUaONmsc=,tag:1o5T7+xcHHZ8ajz3jU6jWg==,type:str]
+#ENC[AES256_GCM,data:I1PATHDdhHnYn8UaT5GngDlVD5pUwkdGzWq4I8gTLolnf9xheyQgSvC4VxaTg3cSG0/8OlKbx2wOAeflVOHG4ACWhOfKW4gK5OKyJ5zgFS2Xfg==,iv:BkVaNzRjvLmNw9q9BVItcnBfzVHqjmRUnz8jXyA87RI=,tag:DETMWheDx3GEIkGJhjcWQQ==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:WHq/SyOQmfm2Z1CQ7wF1,iv:FO4qiBMG+MCXKN+7iEZCurZWOdgicLfe2Y6aMzs0O94=,tag:ufZS2PG2nULWdiPbGHR+Vg==,type:str]
+#ENC[AES256_GCM,data:QDjW4GvjeiMJINLtQMUMCdzxw4NJ0Agwxvd8lz08p+g0,iv:QRrNJkrusfw2FunIVYME4UVywoiphraw1VBpVsWE6qI=,tag:C0QcBuGbpouwyE6oW/AsPA==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:TELopdEklTRbaFHmnglr,iv:MsrzUIgLH5cMZvzbQDUsk4pJs7QA9zbsNkdK/8edSI4=,tag:xmakFDfQAKQjOqV1w3+JzA==,type:str]
+#ENC[AES256_GCM,data:i1xvL7bE7iysGLFmglSLFRMSG8iVlPFhIYG9Yz+4zZg6TVhbneC0C87Z3GVhU7rMrStDC3Zv7EH6L2E13XBVXce5pE+20JBdr+JdNbGaWEs=,iv:mSCQLTN4JJSFq5kHxBT1nOp1VCsL6cZ1uWGfHUNzOsc=,tag:wJHklo3jeiVS8Uupqjb0vw==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:WJv5SDaF0NONpp/oQ6JX,iv:I/sct+COS9NQZVEmdLscI4OpxWEQfRUnpdGeNI77Utk=,tag:BMjtWJeqc2ZzbR31LZ5j8w==,type:str]
+#ENC[AES256_GCM,data:Ns/DOqFylL9YCpOmX7slbRsadoODyJgwObnZuYLCsglCkG8XXvewNc1uW5z191yhoxB7WfUPxgYSf37oXM9dHVAzRfzdlbO4iEVWl7oaCYqwqUkabmOW,iv:wA5DhW0Q4a13zzmr4/SLC+uu2qmFd+TXvcwqcOKZzkk=,tag:JxWbFqReKQOfYwm9JGcSMg==,type:comment]
+#ENC[AES256_GCM,data:LjZTVnOHSU1mhwr4BCxdlcGeL6IKlC2/oDjeVIFEIloDKX7HUewXEV5dJ40ZK9RUckPqewbmyMUjnkh36s+mBMkO/H6iT2c4JpnvkGC6nSZQsXF8hN1SbF5zbD1rVnMJzUQPFTTup+GAthDrFyuy8Ev1fMDbVIl+fI5WTg==,iv:ALd5JkQVqDiBOst8EsqZ9nUcwL56G2+N8MEMq7bs2n4=,tag:V19JfKWA047bYtZxA23C9Q==,type:comment]
+#ENC[AES256_GCM,data:HZD+5LyYjqK1tI7RvqARLpMwBMh43+Bc4DEhKCWLQ73uBNPCTqFVam7aSGPPlGxiDxfOa6Y5eg9piAtX9zKwHmYUPI3BKeWr8u8wO2YyXB4=,iv:bID+/8RGZ/uOKQDK5SgWjphH3qRzAEzvrC2Vt+ecbFk=,tag:ksHd6in9MinhJbf9ergU8A==,type:comment]
+#ENC[AES256_GCM,data:chB/thpMVhxSuEuSv1MxlJvgthadD6UqP0k++5QQh7ozX+57mLkcHkD8rNjFLSGOro4EouhT,iv:qPPsRQK6Kb6Bim6uM3WK+cUgiwjXoCdhEmx27D9lOWo=,tag:9yMK5x2QpfdW0JVQtM81Vw==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:sAf1K6KZk1pyvAXH,iv:2Fzvk1MzWjC7x+DdGLgyqd4EauCKgnNcQH6rW/RXWKg=,tag:nR+qR5MQup1eG42Tzh+24Q==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:dLVTVcn7cYly1XTzsv+IhX8=,iv:gLACqv6RmeACfGYrQ81NPbZBmJi27ABRHHlx/NRAI8s=,tag:P44COI+rK0Q14viNZAdHcg==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:85jqVeFP83qq4j3O5klcjsE6Hi/9m4ibUOsdYLzK1Fk=,iv:G3rr9a9aXqCWj8zMgYqorrRbqLV+e/ntIkBDqrVgOzo=,tag:jFi5KhdDdS3L5wF0WhWn0g==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:7mvOSt2iFtqt/XIIBXum5h0ngIhRD3u/Y7z/jto7ofNcKTUqen3C2Q==,iv:x6CKOer4LdAdgs0W06W/4o4Bm8ekoU2kBaFUl6Dlyk0=,tag:eXJ3/0H2Bstjlh++Rval5A==,type:str]
+#ENC[AES256_GCM,data:e7wFjLdc4QWoOD/6Xs9tKJHryePy8zr5MU4krTTH+RDvi763t1zccR9Q9Z5JAD1OFiayyTMkKZY2jFTici94Dw==,iv:kmeiVjk72CjSM+y1BVq6UivrdXvEygQyZG7KW+Ie5+A=,tag:gqESpkHGH+3rq6Oj2z6wQg==,type:comment]
+#ENC[AES256_GCM,data:VRqy0/cow/l6ER8X4JKb7G1oZpvDIVuFUXufLFfgegcO3g+sJwAHsFHk63pLHYLKCi4uDSO2cYg=,iv:pZgiSjJnitZXwWN36Rxt+oRB7/EfTKLKsOGEN2rHJWI=,tag:8IQyl9bFN60Ob+n+MJ0THA==,type:comment]
+#ENC[AES256_GCM,data:284FidxVlvdWTnMfLNjo1RGUjnlQBgu0+Q==,iv:xNhgjkrX2HiJHTLazI/kv6hWfFAn7zNWTUiQHS/4rkQ=,tag:TsPiR8odSxF42bQ1rQ+wew==,type:comment]
+#ENC[AES256_GCM,data:oUume4DMXJfBKQtq1Rboa8uMCTdRliSbz6gdmXGZgU9mmIvStIB9jNQVD9q0fiBjTeF0MO+ej6owP57iYWGkpUiU36+PKAU7X1aNg+I=,iv:WJjIgE+rRoziFce4DXaZmSY2UGYf7Rc1DOAmG4iQc70=,tag:qixYJdnjhZkVrRbE7M0xOw==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:yQbq4hvVVQXd7ztuwpTugxjhWwCwnsyjpMInX7D8gfgEAbmZEIj4X7vtyrbQ7NTM,iv:98hpLv5PeVIFI71A+gVLmFrPz7fCRwzXcLPuLnfXX2o=,tag:cXBF/YaBeD6Ib5U9dtNdRQ==,type:str]
+#ENC[AES256_GCM,data:XwQbhVzgvxzngvXCPuRwQ1y2bRBhVJMkAaZ/3UjJUgSQXYk7klCkmPBuyphaAdckDBnN8iw/y7rGv4vWpWyflSS2/BnLRSI=,iv:z1xsCDLUWkGE7WuokIBOmHsOUAbQzOezf9JO9YEEmtw=,tag:wvSnbIkRcxtngcWqNEwW6g==,type:comment]
+#ENC[AES256_GCM,data:AVyG/29MJAqKfhmnp1VcX2JPIsFRS8OvtKa956x2Xe2cpsXrYFkaZ1epoLZwinXJl0vkVY4Y,iv:tFSCjdstIrHRNGF2Vaz4tp9BT6sKs1ZghSdeKez1jQc=,tag:v/f+7jGUuUbxB5MbFFxkeg==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:ZmkOs3UXGA==,iv:3l+G6ROU2gIMGzo/wY8YHHCM7ohqqlWXOF3b9ZckQ6M=,tag:e7ddOtr1p8cR3+Z2UvDawA==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:rEw8h9snap7oOZgmNBJqZByVazk=,iv:R/26XXfv5p+IqUfFOg7px4f9fl3sqd8GUhj1nRePJYo=,tag:MK2rBNNJg4J0dVaTf4TzhQ==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:5V99dLQrDwkyGTI=,iv:sL+9BfOK0ZL4o5lCAYOyTQ2wvefdB/PvKb/3NeJiHY8=,tag:SIVXbGHwn5l7N10UB51emQ==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:AW+cfD1by6WMi9krGKnV,iv:v/J/QduyTQ+RYf7syBC3ReDJl+2Ky8rfiIfiV4DdgFQ=,tag:Hp6AOs5EkH/xZ7DK3wrecg==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:Kt3Mf3HGixp2aE8GSnVallmO0fWx90tgyA==,iv:VvB5FLLN3V4rD2TqvGUiknDCArsnJdElKg/tlzx5aMU=,tag:F9pFqIl9i7MYvWjV5af8kA==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:GIwD7KycwkLgOsBjjgJ/DGCWGAsPjpvwBTdb7V9jWA==,iv:7f3nyuweRowOqixKAb7SQYFe+N5QXhW57sKDcwMBxUE=,tag:AL8VmPz173lV1UBS9URuvg==,type:str]
+#ENC[AES256_GCM,data:HN7N1ASxqlA1qwaT9539mtLwSsRzMuZHd4PiPcurHyK6nizQaS8=,iv:ZlvjzXt/tLKn76TIJcWSKffg/o7kOPWI+OKUgjp7SVw=,tag:fYfdxo09NmHnmpgTSM2dug==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:2GfoKIGA9X9daFtIHMveZi28azQ=,iv:A47coGa6vipg4EijOpYdfDwu1Jg02iIrSyBKEgQviC8=,tag:ZXjsTtZiw49uKLIoNycAkQ==,type:str]
+#ENC[AES256_GCM,data:ub2w0IwUT8j3SJzPWXM=,iv:CdWb4oLspfbEq6WZRKMl41H+yCypj38GtcRlt+LhcYg=,tag:mh0McdtlVlsx7SsWm13tKQ==,type:comment]
+PODNET: ENC[AES256_GCM,data:s0emChySxy/lcfVruA==,iv:1iODPKaDZ9cseYNdYMcmASyvBm1wMWXbB6ij67la2vg=,tag:QuG/JNnuU9o8zGVack3rqw==,type:str]
+SVCNET: ENC[AES256_GCM,data:sHgbqSKVpIH7RYKoIg==,iv:iMfdCWCrknJSPSdvBzPBckHH8BgcblKx67oSXFIZASk=,tag:Wke1cH6KlnvGu02OdWI2dA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBieHVpSDNGNitpTFJId1RB
-            d2VHTTNUQmhVNUJ3UjZPYjFFUEpiN3g2eFMwClVpbkVVOGtzQVRKSXNtZDlzaGJs
-            L09JanpEWHRkVENwbit3WlF5Ujg3VmsKLS0tIGtDdHN0aE5wWjUyTWdHUnM5dWlu
-            a2oxbkdHTUUybTlKdEZ3WVE5N21jcGsKX/+nu/OZshs17Bj4yEmz/gBsqW7yNDnI
-            y80KO6m5Xmt4nEKGCHxUvv9ukRJ9XGefu9c6eoF7xiAUzy91iBwSjw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvM2Z2TFN5UnppV3JEMU4x
+            Vy9NSjlBYzFVb0lNS0NqOEhhbEpNcEZsSGpvCmoxZ1k1eVNkdmVpSC9FT1BHWGN4
+            Z0s4WlFPRTFpNjRwU3BRY0tNcGtHemMKLS0tIHdSeXBQdStjMzliWWlUZjU0N1B1
+            UzJXdWhqa3h1L25rNUZTVGY3VWVZR00KjmMx+VcG/DpHoUnEDXtLSiVHr4sgaO3n
+            uuMBhz5K7k/85DNorhk51zjJHJNXeaTOElPMohCCOgx8RUs4EOJJAg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T02:15:53Z"
-    mac: ENC[AES256_GCM,data:U/60UmlxrJqK+lUBXPAO9tVaSac4fjJceTMrnrnZxhRferL7XQ2BqSRoTFozgY5YB01E8ET3OJAKRVJ1tbqWw4PfB1tprwKdvQikPQecLLUDcqiKMDoOsuGNkCNu+HhR/Rqcz+x6de0VE8SVBx9YYqwaDAQluIDHE/ZFfH8PBQQ=,iv:s94EuXgNUEAx957HOscVyrCc8RQny/VfomidLg2ZvlY=,tag:gYptmfP6rT/z0btv6smchw==,type:str]
+    lastmodified: "2025-01-19T02:23:35Z"
+    mac: ENC[AES256_GCM,data:yBxquG70ALJanB6fE4c6Emvq74uzijvyl8IM0jivSGXu/z+Gs/mLsqfor/ZQqIETMJEBg1x4O7fdq7n72+/2SSucDTdkx2PAelh4AoOIu9LqO+rBxZ9socUJxqS/s9iH72vauWBwi1rXPKSCBbQrGSN7cuPDY2FEFXiV33zcYkc=,iv:e0R1MUl99GylHE8V6DnK11XD7L4Nq9QTUfK12nYY6+c=,tag:mfW9tSt0n2qINeOvUspr5A==,type:str]
     pgp: []
     version: 3.9.2
