--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:qpnqiCkDvb2GGOlf2zp5Nr4+qH7n0D/+tNRNXW6DdrUc5b1RCleFMPppKrHF7nkybriIzJsdqJPOWIwfs2tvcaM=,iv:+rWV7idek2zz9T9d93J1hqiwY8SIGPTEPfMYpPyqrhE=,tag:2mK2JVaXGEFWSCqdR93G0g==,type:comment]
-    #ENC[AES256_GCM,data:eMPwEBwiSwP7qf5E6FFD8ryz6gRTWMzO9398nTsy3K7a21x6OadcPk3epDU=,iv:GR7mWwdTcwMRT6DpWSGpa/gPPWq06XnWmeI3jyZCafk=,tag:LY2/jqX3ygzsgZsL8CJBoA==,type:comment]
-    VIP: ENC[AES256_GCM,data:GRAYjnoxO8JOUF9prw==,iv:v5jJKAne1brwqpXZB1ni26CBix7WcXCnhXAdU29qhKg=,tag:aMy5QMJuzmE1wvTk4rEwrw==,type:str]
-    #ENC[AES256_GCM,data:7TDNDtRedqgn8LQHArvxdGB7Xk/g33Uw98XF,iv:cgEQ7Lx1dBn2vyg998lsIpv0eKZJ2+VZijn+BywqIbU=,tag:ieEqG5Km2G4YNhJz5vmG8w==,type:comment]
-    #ENC[AES256_GCM,data:aRjsAafiDAp8h51w1tpPmxiIqstmY+HNEc+T24zutURrinirwb6pL36U6jrvrsK8D1oET9YZoVBLw9yg6U2Z+mbolSDvYxIhOVhgcym98LKCed5/5X/ZMno=,iv:pq6b4GbmGF3za5egfjrIk/Fu9R1al9nEQS2rR6jri8Y=,tag:QDMw8SIAjUVjDYlTUqotDw==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:Vcia2lwrutCRFs1zpX0=,iv:QawuIALzHHXEDs21avlDhnnzpmW6qW4XpYpaxeRIvDI=,tag:txRPhbuuw5Td3qYOjn7gdA==,type:str]
-    #ENC[AES256_GCM,data:tX4gS4SETJyr99Q113Qjna1RxNAHzwRiXWpKBbNrqksqGw==,iv:NAPt4WbBvfH62ecpMu0mCyawFLoMpOzGVc1mQMAKuiM=,tag:JcILEMRDQC/xnZj/CeJd8g==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:dMs/RTN0ZE2CHYHBUQ==,iv:vpLosvFlh7tYdvjocbNt+aitX078t2+fUrD8YHjGogE=,tag:XZ55MCg/ObrSqJWnNoqV4g==,type:str]
-    #ENC[AES256_GCM,data:FLXEGM295YQbvmuQqHYRnAaKY/8m5foSrv1v02XOAPTEzfcegGU5ZEr4t7HMc80=,iv:YNLa4mTHVbS+UI39Itj4T3QYhvdkmxc6p8N2fNjlJqM=,tag:DqTc2/TZ3Vgs1HqVk18C+A==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:v3rvl55oKozmo34o/aHfHPdholrBlsge5Ey/HZdKGQ==,iv:cWLtDx0rcOWDwO/yPMbQRO8slUs1Ms0iAHwske6qolw=,tag:QRpe9/bCQoLdILCHbnXCSg==,type:str]
-    #ENC[AES256_GCM,data:vdBwLWvKQSfqHxqUOXQpHsyil3yE3AZ/0AG/hIOYaJbHY9HWXPs9EcHB1Ig0oUw9wYG7BggbsjCt9mN5fd7hYD/BBSUwa/aXRtQTA08VlFiXzA==,iv:xh8NAdd5+R5zs+auTXURf+zFNmtgIvdiO4gIqsZsL1Y=,tag:m8w5ojXNPi5q3W1RD4HHIw==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:OeS3S1VhX+RvmyM7pyon,iv:A43tr9N1Rf0kHk2ARUzGnhnjLAcy6w9unYnM7SWQBJY=,tag:hruqtC8f9X6UReOt5SWBKA==,type:str]
-    #ENC[AES256_GCM,data:1IO5VRI2TXZ43vw8M/xndIpT58VQStVRE1HAk9d+w+pd,iv:jCf6x2IVNP7JRWUzH2lrMYOoBnADZSOR3sLqtOyphgM=,tag:+zxL/iZT50PYgVkLp+KwBA==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:XbZk+fDPXhuG7jrQHMyn,iv:2dOmQ/4sthRQU4xEG6yNzbwW/k58MXtwBMSiU7p05z4=,tag:+0hJjaO9e5JlA8Alkvq85g==,type:str]
-    #ENC[AES256_GCM,data:PUUliVQWXwuxQDdgLAcHbXrpt5bRgZSLqbpg/iQ+zzCWesBTI85ccyUro6YtK/76r2qEG9Noi2z5RyxH5S3PTRG3kQFWrRN/0PKNj6Wb2ZA=,iv:5iFE6XFJZ/xvCl/32Gbkn+yBock08m+ZJ0Vl8HNTASg=,tag:MG/IocrG7RdOE1l0YMXVaw==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:iiEGL7aOTTcZv26OikrL,iv:al/cK0a+pKjTZusGvfSnw7aX+jY8HaWWP52RS8AOJb0=,tag:uZE7AjgQbRxex8tMi/PEiw==,type:str]
-    #ENC[AES256_GCM,data:QcvEMqXML6PyBG5fxjgIEcUNGdx/G/EQKSriaOPysUH8LPUQcAXpJq7s+mIOxfzQ2A+WXspf61OJgyRUVc50LWen+laer7djZ/OC+lprJOTLckYY3uau,iv:9wbGipPOjEekHCockYhnfPPcy0i/16jfi3JeMOG+xR8=,tag:6Y4q7r5cDV8es0Ug+vB9eg==,type:comment]
-    #ENC[AES256_GCM,data:HcKW9nwVFzCqYszF1M2LK/2AOeaNZRCiqMeD91o/daT65NY4FwV/t+EkkRvBeyvUrMlAec2sRXLotpqoeW+r/SLXFtD+LNGJIc398zUaFKTL4U5z0JXXaYuUZ3zhH92ku4B/gD7IvII4IyTsoN2QBIajlLI6YnC5waDNIQ==,iv:KoROR6kFgwfioUwDom4vDgEBZwMrtFU8yxBgy8QyJBk=,tag:mzSZkfD3rTVPFsvpoP4rcQ==,type:comment]
-    #ENC[AES256_GCM,data:ckqaOMx7DxeSfRGYAjRphFqFcVHnUxKXXvPJPhUWDtXC0o03ACnddtjKRZHagi0y0qH/zMaoujFZIN+j1SW7dPn9LCPWKybenQNg2aNkr9Y=,iv:LCTh4cXbPQfSm3gK8oQxN21HSjgOD/09CTcI7/1GmQM=,tag:XQ5FCaYIqg6wI4k3MwoQYg==,type:comment]
-    #ENC[AES256_GCM,data:GzwANasdt/RtsU8lyK2o96jnszqLlhcmI+AVHK5W57rGvViNyGbDCrriBIDyIq1SJu6wvtpM,iv:CU+tHdRgE/lLC5uXJsje1BXkzL6N69j/8kAOqIpQHGI=,tag:6+VU4KyCFI6AhY8B8qU0Ig==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:5sLiJFxBztslRLwA,iv:8/aU/EXB/hexpXn51YB02SXwI81B8R8qAVEC66J80+U=,tag:hbfMJAKWenqLVP/8FUx/wQ==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:XR6ZO8QK1KfKLCl6Tj/dg2A=,iv:29JzlxtqVHGb3+DuQmwUtlcZ/amiC6WSgWrz5Adn2dw=,tag:1hX3OgYAok1QHuZXJB+vgg==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:GYl9ERXzZ2/jCvt7NoYPczKkYPBvUjas/e6tSHeeIXc=,iv:athSLuqH6TJprHt7Pod4UJwIXAe4bqdaq13V985AwQE=,tag:lOoeKr4nsQ3/BQu7RwrlMw==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:mJ1lHt8HV5g4E3Q/I6kyPg4mdVyhGi9TMKMZcMIsMu7cy+qJgW67UQ==,iv:jsT1wqkRTRnLe7Bagb2LTkSOO/TOTfFxZY1w6QReElw=,tag:sx6yhj78VL3nV1nnHZa9uw==,type:str]
-    #ENC[AES256_GCM,data:N/YpNUmTy6tO/17DtPcIIaZAxvg2EcJ2zrLGJx97rPm1LvJKpfduadUrfrAeO5I3afAXEKilSKJ9CnlZYZ7GvA==,iv:RRy1JQrPNTkBu1kky53bqcvcAVgHWGa3sEH3Qx9l74M=,tag:oTZ5S221RzwmwHft+Wlo/g==,type:comment]
-    #ENC[AES256_GCM,data:qaIE2mld4Ucu26Cqk7zWm66rUBU8Kl+sbcO/0nzx11jH2b8NM2o3EVAlXDbKVgNWF5adMfCVgUQ=,iv:dm1wXorIylOrx1T4DDs18UK+KLR9REcXl8FJ6nAbbvE=,tag:wRLXhLW4NGK5afv5Foxq3g==,type:comment]
-    #ENC[AES256_GCM,data:+X36IHUkDQbL7z5dy7fLcCqHrN7mzPkycA==,iv:P4bBkjFKponhtsCkCpUnlAa3kRr9FjxUr/z9lCWd8kc=,tag:rYdpUMUNL1j/FtgVV7mImA==,type:comment]
-    #ENC[AES256_GCM,data:E8aitSF9m9i9lA7Tt/4IA2oImLkQ7JwZWYA6YAVGq9h5DIoVtmA8+lFxMNA24fAlzPnS1adbxPPCJgewmtV7zADVJjUmeC+nSwTcq98=,iv:ju5deflUj4UDeI3iZSUUIn0D14TidauFIzJcZJGn5+M=,tag:nAqxTQK5uD5rWg6TMWNseA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:DXP191Y5jR35Lq9Oo0O4acBgbB7ekVlm7VVSz0UwazclMU8RwXqjtZLcrdx26BjR,iv:y7wn6WKbkLMmNV3TW/ziCbaxzJhGajH/C3P1HBwDCy8=,tag:0ntH9sXQJ/K2ctuIO8vteg==,type:str]
-    #ENC[AES256_GCM,data:tOjHJf2a8LOX/bX5dQ9lSZFXnaqjqLmDZO72QIorB5788eqqrH9hx7oVKOxBbXX5levUxOk8Vj29nVIuZbh73ZAtEQCZeZU=,iv:Au4j11EhfQg472qrQlM0eRkj+xI3T1Xd36FXJqM6vhQ=,tag:8EEolPh0ZQsOk54x3Gv1Jw==,type:comment]
-    #ENC[AES256_GCM,data:2omgiU1IOkCB2hev7TyScVBecM2hgzpNBFkZPhjD5bEheuZ3Q+IMiRCRmqxsdUFCil4m9yHX,iv:q8mXcrZKwP2vcwkBySqZLrWbHZErOkMB/6SfXPLZsLw=,tag:DjwQNC8Egb/GJecvdTttmg==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:qlc1jjDE0g==,iv:gDWvDihcu6HNxLSQgDG0IMaYviGji7RaEJFfdLLIU38=,tag:LYoBhz0b2KvAvU1HEjp3bg==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:JKrWHpZ6dIUdqRCVTohTSOs8SsQ=,iv:+ofxQz+G4DLET9ZBeNdfMiE31urO42vbrVnSorThrkM=,tag:UpK31VVh468GWxXvZzN88A==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:EiN7OT24oD6zD9o=,iv:GXW5hBwVHpg0L2ZiGPnWTmSKJ716Nkxl0HSDhmQTT8Q=,tag:Yi7Wn7Vqnaew6dyzyugzJg==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:SCBhdMzyh6EPcgCWBzpw,iv:QcE+L6X1Nvjb+HFay7ebS8q2cyhlHo82x1c9oqpSd9c=,tag:qyNJR+7yzS1sDZ1EN7opbQ==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:uFhfdT62alb9t5EEPZuIJoKopchZGWBPlA==,iv:ukGQpn4k2Qo0nxMJCf3Qdju+c8PP7ISngtRK78XKBSg=,tag:wtUMfApVm4K7RcXldktFAQ==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:Dh9/LOaLhYoO8Ti3iA7aV2wzQwkZbgAWlT2sin4h8Q==,iv:hTV6yTag+b/pbBTwXRG6NB6yEbr16kKlj/IQMN+0i+w=,tag:nw537ymei9lTBzAQq0UFhg==,type:str]
-    #ENC[AES256_GCM,data:DRkVQaqp1Yd/QU6/UqRzbHAyJu2RSu+3Ue1QU/bJGrQj8f9PI6M=,iv:sXm7wmtZPV5Q096v5cXBHEs1O9r1pOkyLoiEY1r1Qb4=,tag:XH7OZUT7w/Uu80mlFl0NDw==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:Qd2/qSTbGsAfnvmaUn0tYroKcm0=,iv:j3uXV3tVe0be3Sy4BWxlGz3nfurdnRiyjGzDVZQgrmw=,tag:Cw1QDtUSgvlt+GNA8Xax1g==,type:str]
-    #ENC[AES256_GCM,data:P/PYZm380Jvnfy7EdtU=,iv:ewK/uO6DDgVKEQjs6EZOFjniJ7QHkQqZiZm3crVKbmg=,tag:sdT7OFTg/Z8hdKP0sgAz+A==,type:comment]
-    PODNET: ENC[AES256_GCM,data:Ammrd/QeaQwJVErKUg==,iv:JT/iBnMXjfbvhFlxV06N2rWfSvTntojeqG2/SpCwwYk=,tag:7FCjfbSAe3IC8CgdVYOUFg==,type:str]
-    SVCNET: ENC[AES256_GCM,data:I/Dkq32MGGorxqGkuw==,iv:A+lVijNG+pUMtOn83wk9pe/kHIh56pqurIpAjmP0VqM=,tag:ZffIzjJR5rS+eGkYVpiPUw==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:evYgxw==,iv:Kt2PQ4TS9crUBguqppJEYYqM3cFAmubrqozQoM/pyS4=,tag:wQwS1lmCeNB8CKJ+VBMxLA==,type:str]
+    #ENC[AES256_GCM,data:yC3rBrWzJhgN9g1L+WFgFZFHGcXP5E8ZvkVLzVcH2we2IXIDhP623REwy99kIRUdixI5e+w3JiBZNTFsu1xCmVI=,iv:yefYm0Eus8myJIvnz911iAjYhZSPINBUtzcJ03v4ntc=,tag:YCIsKprtWriO77gax7TQKw==,type:comment]
+    #ENC[AES256_GCM,data:1jtE+DgmjsXb0pkOmMRi1JqEtb98iI3Wa7IjsuMA2dP7wjIbD9SgU7elm1c=,iv:u/nOO5bSzma401/vo7VxvxSDi04EAF4aeQ4UGw5q1f8=,tag:vRPJRQW+o3rSFqYo+iYgSQ==,type:comment]
+    VIP: ENC[AES256_GCM,data:lpEBOEp1lMC9sPiRew==,iv:Q4voX6szpC2BE0PobjiDZAiZkedqW38ks1qzzh8kjU8=,tag:yvdZ3OmCYSA4chepkIHYkg==,type:str]
+    #ENC[AES256_GCM,data:SbOyWWuOpDgC4bKbMw45XnmNioV1qIimeZqV,iv:h7/SFlyb8teVo+9aHscc9ii5Nm8KlpQw14sFOHxsoPg=,tag:i+zK7XM79UuWsoW5qNuIrg==,type:comment]
+    #ENC[AES256_GCM,data:IsnKWxUV1pntV2SaTQGO8rsyJlJz1aywTTsr/9MbWmg8y8bPIU/LFx7dOS7lGkc24RgvazuLwhIFzorqswvBxyiki1apIM86f7e/yjdJGobGNUjV8v9Mb0Q=,iv:ArRv50E2SWXt0MrUsIvsgUdddTmyrvFGxzdDW4Q5KQE=,tag:42K9C27+3p+Uk7RRTNfZNw==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:siO25hAHKGZUbxmelys=,iv:tjjy8t4fNNKEFS66Z5Y1BSTp320mnmaVGYcOF5ZJbHM=,tag:cYtvQyfK5l4ogDNKD3Us1Q==,type:str]
+    #ENC[AES256_GCM,data:2wdThignNyIHEvs4Bpzqj8QDVpvcC5vLHeW6y32efuLZ8w==,iv:iuMd/Kvls2US10rdiTKP5iI/K3MZ/EQqCmq0pJyBxyU=,tag:Ea+rIuiXM49IjkvjHYRoMA==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:c4Q/DcAA1g2/1A2k0Q==,iv:km3ZBR2Ej+pg2UUnbXkU/Vxj3Sn6FFJChSM7oaG0ze4=,tag:jB2jHpfAob3pVpmkHqKkXg==,type:str]
+    #ENC[AES256_GCM,data:tb2CimGMLHy/exmQvSvF7kE7atiusHGuus5FuYeTPZoiil1kkmEGjm23/64S+F0=,iv:n14EsP4w2/62tJ+YTIIxYMjqxt+rKCFIjnExbt3UTBg=,tag:wX5WktlY/5tDjdVT1ppXbw==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:z7E6yY914lhVwdoTPosCL2FRzJ1nRJdac8UO55IJtQ==,iv:392qPxqY2ECWfKPVP53oTgf6Wx/OjgckToIPuzKkK70=,tag:124Wl94/JTs+B+cXAUPMYA==,type:str]
+    #ENC[AES256_GCM,data:8HdAWeOhCxdlSW13dS4VCdepGsuo27qw/Nfg5a9rhbBH4SVbD9Vvssjn+Yv6Fb2NTYgw7cbMhl3+ReUU/6c7q42C+P7x143ylnrYr5F7uvMZBg==,iv:97NlHivoaefLRtwbOTTPrIxztojeSI8m9rDNXCzAIV8=,tag:dZnjjPYcF48xx0dDkWr+Ng==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:wngf4NddXIxlmiyamATh,iv:FsMCblvlXODhxaFhHoWm4WgSAISb2VLr8HyF9+Ik47w=,tag:nyJQ9GJl7xY6Dc9n6Qeb/g==,type:str]
+    #ENC[AES256_GCM,data:0Rl06on58Y9msBESbjvtGiDKBbxT4IDYTOmuWRdXenyD,iv:/YLz+n+kufMzdp4q4UB7/OZ4o3r6MGLHu+rM/gNRWzw=,tag:8yJqj0pb9WVjNxtZxnhgdg==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:/RvFB9Iar69RCdPMpobr,iv:kBKp2rMHA3NROLgg4MMUbayeH/7pq1VQoKbQ5UC+eJQ=,tag:8hvvPeDxefSkj34RPNil4g==,type:str]
+    #ENC[AES256_GCM,data:/w3zOgOhXOztzCX7zhZLJl6oscj4nw7ZiLrpOi1HqwzmZ7otOubEcUoCa7LmZPh5XlH/wAO7ZJWnsNPdgFFNaE6s2Wrfsl/dtNqauhQKhrs=,iv:trFbtRQ6gNN//aOYpD8Ul8Sw6lpSvWxF3/kqbkiH+cg=,tag:HNMTjIsHdUD3nK5Cyc+5XA==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:EZ47US7kwNdo33lQomjR,iv:/apNJKTS0MbVjhuUsMJxxUUfWo74UCCIGZUUNQ31/+A=,tag:pnJ8gbhomqDt44sHIch9vg==,type:str]
+    #ENC[AES256_GCM,data:CfZtAVIRbdvnPBY+29ANqCScHsiUP/NqOYHHY3+2joe1Gs4Ftr5Fbz6NyQ1gc4n/gQ5HvHJKjEucZsRPetDxlhuyBN1oQvPUL+yMfTJuf1DHBmRAYjvy,iv:c1WaCM9jDhIQLvVEIDIhq2mWbwcZxT3mocrpuXctyo0=,tag:I/YcQRPj0YfDlrTsxuRueA==,type:comment]
+    #ENC[AES256_GCM,data:LFuRjsI6mGYTU03dNxLQk5I7Px4zJ+9ViUfbSJ9T94YqfIvWZJmOOMgrc79F9bo3ayysQQHtzVnUuhPB1uupxHlq0Dpfu6GyIv6XRIae0DYjqjSUTbJ4OkArj9LCASRB+s7NPnj8LqmMoLcPSXgphIRnXgjrslRLKJWlnQ==,iv:rrsDtSSmKAu43dc2r797c4YdZg9IowW68cOzG+Gpe2Q=,tag:1xT2rALG7kBdL35PcnqCxg==,type:comment]
+    #ENC[AES256_GCM,data:kN1XRRVHLQ23dZnmKWJ9bPWAB90ZJVC2BTMYrRItUgHTCgUKg2wmdCrxGOYr86CtlB+nVnqvJtkWfVPaTwdRxcphNkdjuq1/U7nrvAHlkYA=,iv:5MNoVkus/gz+kE6gp9RmXSNziy0AmtoA6XwJdet0SbM=,tag:0WPZyoOCqsX2SAN9kdU2Gg==,type:comment]
+    #ENC[AES256_GCM,data:n5D6WAx7d0HT7M0YipHl3gPoa7NivrJPysCOVriKBHNJh6CURO47H00q+Zy0dQ6Fn9EA6oMl,iv:O1vX14vPBtYmwMXIPwZr2Y3Pq7Sp8uxZlDyGWsm0Q+Q=,tag:ji8b/e3pSfqJCuf0US6x+A==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:mlqRhYZIHSghSyPa,iv:++THg3SKYYfbzE8G4ScLjI9Z9Y2U/2VG/x8BKcWIKgM=,tag:Fwa2gJGPLKXaPoSIZs8c1A==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:mYSPk1EOkCf3yEcqK2eCr9g=,iv:RQeXioHMFM/xO/ROzM3OCYKWfvjvH1pRUeNVI3tiCuo=,tag:4z8cxm3Sjn8DC6IcxU+IEw==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:eH8S52Xqh2+Tg97sgaZ9d+CzKaoktR/h5me0ZXnMEHs=,iv:9IM2YJYaFdLOOCGmgQWIlztyYypHsvdNu1JJ2R6EgX8=,tag:4bCJkNdJzvwWF2JySe6T5g==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:FhvzXswBtsTQ7MggBnGnS+lQbSisGB9md3gz2sPpFgKk1tPk17y7Qw==,iv:bF1NcAjQXkFFD/FiCK+BbwYxF+wwyM28X9PsWbYYbHU=,tag:UIyfeA/5uPOt9ygOh89oKg==,type:str]
+    #ENC[AES256_GCM,data:+RN/PyICf1kZ50hvOy4izwrkijED5b/sjYEx6Hmp+IWeZmw8DMedfuUIDmAbRjxrZU2MzlfLmrQzdYpVyrXLOg==,iv:2/jix2Aun5Mjm6K/JjLQYVf3Ipc0sC9mnNZpEDVIlA8=,tag:8XbEAgqSzWw+CcwvhA4qXA==,type:comment]
+    #ENC[AES256_GCM,data:xEfWws/X7RVMfXyilimc2nwYNLM5sIkK63zO6Gzu9s2RC7vvuMNjXesas3m6gsdtWlbjyRvk7bw=,iv:oxXMZ6ooZbVv8UGv084c/wzU6VQPNWaMoFDAkOu3gLU=,tag:nxawN/FjTMcxxIEcvDy59A==,type:comment]
+    #ENC[AES256_GCM,data:bDGClybwdTaiyiuan1CxPirxRcXlD/pzGg==,iv:r9RJX+bUef3GAFrYcCLjWINxg2jbXvp//VinTXayPW0=,tag:AuVb+B6sGA93k5yZbJW7PQ==,type:comment]
+    #ENC[AES256_GCM,data:AqJ9yOrAzfiGwhBeIFzjlWPYlQy4jcUJURBIv2q6TMchUvK5eLMAOocxZjdHk0MnQSv0+3nGcNtQbz3JiAsqElCga2wYNMt1TNTUuz0=,iv:IsiOBRMhhTE7Pdwv+B1vNcqxvGNpYZ+8EIUB1Hr7Te8=,tag:Vev1zQpvo/lJ2oyzpndN6Q==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:Gm7No/R4xcCsP1SOYE5x1D/QMUZ9dmhXucEVd0LQ3cxiOIOOLXkMkBushWucHgyf,iv:ZN5qkjrNGJr0NJtFvDGAs6DD19nqtKP/B8tfZjpIjto=,tag:cosWbvnPK3qywA3/gKDfAg==,type:str]
+    #ENC[AES256_GCM,data:aunHuY06sa8ukSqUDPyyNTA7EfESQcRJefbf1hlW/z2LKbcvHdZYLY/0sgdZHYMak1IMecEgjvXTWJe9bOzF07xqyZ7k4tU=,iv:kJ9iItWxoXIJJK0uZAr31DCFpGLVWA8+vdHCAgz22wA=,tag:c0/gEpWQh9Kp62HUfxIQrw==,type:comment]
+    #ENC[AES256_GCM,data:W1aMzpFqc4lrOep7/ln2H+d9j0UDthASOWHAjoumCNm9zlbpUACPnPpnWxxf5JY1ISlkiziY,iv:navtQ9OEJtFqGlSPKUSLYU1+E5s8iRP9UlnfPRuw55M=,tag:bOgrcnIq+MRzdFT4vXG66w==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:nrw4GqJaBg==,iv:Xl7OYYAhMR+e2/O55J0wnqNSdoWu6K9IEJRpVZ/bxyM=,tag:yGdZ3yo8kJuhlBpBEvD8KA==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:1nNTVi30UTKP8waUK8K1cXNu+0w=,iv:XGO66PnAv/k6klZYfnlqdYwLtMLlYiwscjvP/tRFnCE=,tag:ipRMB2SZ6gwVIs+IO8+Bzg==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:nw1dCp4u9azt7e8=,iv:GxnHb3iUdQ5TPa7ZF9NEOEFeKgYMAM24jo4W55hV82U=,tag:a+Oo6PwdU2lylJNNcTEOLA==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:lF6YvBeGT5j5AO4WgKgX,iv:r8IgmI3P6V8DYOfKyfjmzD7r517M3DxTeafrz7KktbU=,tag:4ES9+Cj+18nuWeTifxCNiw==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:elW1ZKEzd/Jii5p87iPBG9uIw/fbLUHEPw==,iv:yes5W8bfLBOJpkqltBCtbx6ZNJ05cz1PiZYTVRQ6Nh4=,tag:lueCx/p0ktnEsUQsi+9zEw==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:P6Gg0SEhoEdr23FbVNWQNIiztMytyzaHwstEmxfCvA==,iv:mfdqTL1VW85TuGAilPc8slmxyM5jTLRwxhmn2EUoLEI=,tag:V4lC20DbWgEInEo3wDbzzg==,type:str]
+    #ENC[AES256_GCM,data:G/SEx8PrgnwlaUQfnXahQ9EZbFhfukxXxe31agZGSHgpd15hpDs=,iv:KHUQ+IlrobF+L8k3DTICVLF7AbPRbR/hv4maywy5i8k=,tag:EXF1TTg8unpTWvkSWYXWzw==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:jeN+xdVXdXFFhLUwFTBfl0b3Y6M=,iv:1IbJDwae/Z0Q2BKG3/pSeUMWG7bqjmGWBzKmAv3UgAQ=,tag:3EC6Iy4Tld6KmkRRtt4J3w==,type:str]
+    #ENC[AES256_GCM,data:PfuobQb3XMXA4NCQj04=,iv:+tXhqkYPk+QGssoDxyKkXgU/1xa2f33xawGdf7XL32U=,tag:hp5aAk/2SsK0dMcKF3bRAA==,type:comment]
+    PODNET: ENC[AES256_GCM,data:mnlQ/35+f9LoxkNsCw==,iv:i+sinSVbkXNO41d4ElM6e1WsGXt9UZsa1Fj2NLk8dkk=,tag:77FTTsmR6Du8BHuYBSF7gA==,type:str]
+    SVCNET: ENC[AES256_GCM,data:wC4/h+tCnIWC/4RjLA==,iv:xAEXN7Hy+4TzULokszaG91Ew+PQXgjmwO3De63q1FrI=,tag:qEd02DZroOLarHdoiSBgEA==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:PyFwAw==,iv:SWVkfVLxuaYtgsT9mE7MZMIY4CkSQH7H3qtbm6or2fU=,tag:xVYDFvPD1Lb250v+6xrbFA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQajBpMk5tQk1kRFd1MWtD
-            TS9ZRG9JaFlsSVgwbG5QVlJGdjNKVS9ESFQ4ClEybHp4L2tiK3dFN1lNakZmV0Zz
-            dlV5bllIK0lsQkJHSnF3dmttaWJBRDAKLS0tIHZwSEg4SEhicElnem1yd1RQekts
-            eG9MVm83bmlKWlhVSkQyUndqTUQ3VVEKubO7q0yLqtGUFmSz5/mGiCc+r3yzh4MG
-            HEcMQQ8L6OJHJHTzdGWn51vHO9OoNN72WYjqyBr+RauUDvzbiRiWeg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXbzhhTDNINTJDc0thMkFV
+            UG1rVm9QZ0NxalRjL2ovZ2MwNjN4NysrbVNNCmFGYU9pUWdiMURWamZZRzhoUXpL
+            SFQ1ODE1YmFEcW03S1M2TWl6bE1VQjAKLS0tIEJRbUJtdy95K0N5WkJPQVFKWnNE
+            bGdOWCtDZzI5L0lEalhmQ2RxaUNBNmcKIOPJc6liVT7pA3Tu78CoPeTZJRgiGhMi
+            tTwQi7RrltOaGBYVqAW3O6840h5BVzibFb1fvDsICXV69QgyKGMAKw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T02:15:53Z"
-    mac: ENC[AES256_GCM,data:pNekQyK6iXsgnxTcf1xT2D4giKE6qrMX7Pj74sw/beiGR0Kb3Oz/1WJ/svC48A6/XceIapIpUrnEeDDpc5OkhZwmnH2t4fEqrTAElxF5NqF8O8Z1WdFWkRfVirVbhlt3L9tSgg9at7tbXFaJAnXnl0Aw2KyZUj6EFo38JL256kA=,iv:ffa2kbrRfIOr9Y88Ytj8v7QB7+qTC6SMrsdPSz/fjBI=,tag:iGciAzhdU/W+H5dGNx1/9Q==,type:str]
+    lastmodified: "2025-01-19T02:23:34Z"
+    mac: ENC[AES256_GCM,data:WZ1be/iDziD5qrT6W/Pf6HEOmk56xeQlU4e6wT/Jzem/XHShkA2j8R8nGPS4SgD6rg8qbfnFXMQh5gzmZq5bQkY/eWFs3A8jyTkKEOMg+Q0Jna1SLNnxMuqUjePIT6Aqw73j9EB6jR11aIM2s4iplUguYfRJKcUY479G7rL7eA0=,iv:BCQGRFXpalzWS32Ovm8d4bfbl5ECo4JyS4gXAVYPWC8=,tag:XUdcbQZLUPAyKO5C3Vrp/g==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
